# hdb-kaki

./: pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: etl.yaml
data/: 2025-08.csv  2025-09.csv  2025-12.csv  2026-01.csv  metadata
data/HDB Property Information/: HDB Property Information.CSV  metadata.json
data/Processed Data/: annual_new_units.csv
data/Resale Flat Prices/: 2017-01.csv  2017-02.csv  2017-03.csv  2017-04.csv  2017-05.csv  2017-06.csv  2017-07.csv  2017-08.csv  2017-09.csv  2017-10.csv  2017-11.csv  2017-12.csv  2018-01.csv  2018-02.csv  2018-03.csv  2018-04.csv  2018-05.csv  2018-06.csv  2018-07.csv  2018-08.csv  2018-09.csv  2018-10.csv  2018-11.csv  2018-12.csv  2019-01.csv  2019-02.csv  2019-03.csv  2019-04.csv  2019-05.csv  2019-06.csv  2019-07.csv  2019-08.csv  2019-09.csv  2019-10.csv  2019-11.csv  2019-12.csv  2020-01.csv  2020-02.csv  2020-03.csv  2020-04.csv  (+67 more)
data/Standalone Datasets/: General information of schools.CSV  Hawker Centres GEOJSON.GEOJSON  Master Plan 2019 Rail Station layer GEOJSON.GEOJSON  Parks.GEOJSON  Supermarkets GEOJSON.GEOJSON  metadata.json
webapp/: 0_🔑_HDB_Kaki.py  filter.py  index.py  read.py  utils.py
webapp/pages/: 2📊_price_trend.py  2🗺️_heatmap.py  5💲_Highest_Resale_Price.py
webapp/update/: convert.py  datagov.py  etl.py  extract.py  geocoding.py  property_info.py
