[project]
name = "hdb-kaki"
version = "0.1.0"
description = ""
authors = [
    {name = "zerone",email = "98453380+zerone01y@users.noreply.github.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pybadges @ git+https://github.com/benjamin-awd/pybadges.git",
    "pandas (>=2.2.2,<3)",
    "streamlit (>=1.53.0,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.26.1,<0.27.0)",
    "tqdm (>=4.66.5,<5)",
    "polars (>=1.7.1,<2)",
    "plotly (>=5.24.1,<6)",
    "streamlit-searchbox (>=0.1.24,<0.2.0)"
]

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "webapp" },
]